--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "practicum",
   "version": "1.0.0",
   "description": "",
-  "engine":"16.15.0",
+  "engine": "16.15.0",
   "scripts": {
-    "build":"parcel build src/pages/index.hbs",
+    "build": "parcel build src/pages/index.hbs",
     "dev": "parcel src/pages/index.hbs --no-cache",
     "start": "parcel build src/pages/index.hbs && node ./server.js --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "@parcel/transformer-sass": "^2.7.0",
+    "eslint": "^8.23.1",
     "parcel": "^2.7.0",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
     "express": "^4.18.1"
