--- a/package.json
+++ b/package.json
@@ -4,23 +4,35 @@
   "description": "",
   "engine": "16.15.0",
   "scripts": {
-    "build": "parcel build src/pages/index.hbs",
+    "build": "parcel build src/**/*.html",
     "dev": "parcel src/pages/index.hbs --no-cache",
-    "start": "parcel build src/pages/index.hbs && node ./server.js --no-cache",
+    "start": "parcel src/**/*.html && node ./server.js --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "alias": {
+    "core": "./src/core",
+    "components": "./src/components",
+    "assets": "./src/assets",
+    "pages": "./src/pages",
+    "helpers": "./src/helpers"
   },
   "keywords": [],
   "author": "",
   "license": "Apache2",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.9",
-    "@parcel/transformer-sass": "^2.7.0",
-    "eslint": "^8.23.1",
-    "parcel": "^2.7.0",
-    "sass": "^1.54.9",
-    "typescript": "^4.8.3"
+    "@babel/core": "7.17.8",
+    "@parcel/transformer-sass": "2.7.0",
+    "@parcel/transformer-typescript-tsc": "2.7.0",
+    "@types/node": "17.0.23",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "express": "4.18.2",
+    "typescript": "4.6.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "babel-core": "6.26.3",
+    "handlebars": "4.7.7",
+    "nanoid": "3.3.1",
+    "parcel": "2.7.0"
   }
 }
