--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "esModuleInterop": true,                             
     "forceConsistentCasingInFileNames": true,            
     "strict": true,                                      
-    "skipLibCheck": true                                 
-  },
-  "noImplicitAny": true,
+    "skipLibCheck": true,
+    "noImplicitAny": true,
   "noUnusedLocals": true,
   "noUnusedParameters": true,
   "sourceMap": true,
-  "strictNullChecks": true
+  "strictNullChecks": true                                
+  },
+  
 }
