--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "babel-core": "6.26.3",
+    "eslint": "8.25.0",
     "handlebars": "4.7.7",
     "nanoid": "3.3.1",
-    "parcel": "2.7.0"
+    "parcel": "2.7.0",
+    "stylelint": "14.13.0"
   }
 }
