--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "@types/node": "17.0.23",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "eslint": "8.25.0",
     "express": "4.18.2",
+    "stylelint": "14.13.0",
     "typescript": "4.6.2"
   },
   "dependencies": {
     "babel-core": "6.26.3",
-    "eslint": "8.25.0",
     "handlebars": "4.7.7",
     "nanoid": "3.3.1",
-    "parcel": "2.7.0",
-    "stylelint": "14.13.0"
+    "parcel": "2.7.0"
   }
 }
