--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "eslint": "8.25.0",
+    "events": "3.3.0",
     "express": "4.18.2",
     "stylelint": "14.13.0",
     "typescript": "4.6.2"
