--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "parcel build src/**/*.html",
     "dev": "parcel --no-cache src/index.html",
-    "start": "parcel --no-cache src/index.html",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "alias": {
