--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
 	"compilerOptions": {
-		"target": "es2017",
-		"module": "commonjs",
-		"baseUrl": "./src",
-		"typeRoots": ["node_modules/@types", "typings/app.d.ts"],
-		"resolveJsonModule": true,
-		"forceConsistentCasingInFileNames": true,
-		"strict": true,
-		"skipLibCheck": true,
-		"noImplicitAny": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"sourceMap": true,
-		"strictNullChecks": true
+	  "target": "es2017",
+	  "module": "commonjs",
+	  "rootDir": "./src",
+	  "baseUrl": "./src",
+	  "esModuleInterop": true,
+	  "forceConsistentCasingInFileNames": true,
+	  "strict": true,
+	  "skipLibCheck": true,
+	  "noImplicitAny": true,
+	  "noUnusedLocals": true,
+	  "noUnusedParameters": true,
+	  "sourceMap": true,
+	  "strictNullChecks": true,
+	  "resolveJsonModule": true
 	}
 }
