--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.25.0",
     "events": "3.3.0",
     "express": "4.18.2",
+    "mocha": "10.1.0",
     "stylelint": "14.13.0",
     "typescript": "4.6.2"
   },
