--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "17.0.23",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "chai": "4.3.7",
     "eslint": "8.25.0",
     "events": "3.3.0",
     "express": "4.18.2",
